@@ -33,11 +33,11 @@ CLEANFILES = constants.py
 EXTRA_DIST = constants.py.in
 
 _gobject_la_CFLAGS = \
+	-I$(top_srcdir)/glib \
 	$(PYTHON_INCLUDES) \
 	$(FFI_CFLAGS) \
 	$(GLIB_CFLAGS) \
-	 -DPY_SSIZE_T_CLEAN \
-	-I$(top_srcdir)/glib
+	 -DPY_SSIZE_T_CLEAN
 _gobject_la_LDFLAGS = $(common_ldflags) -export-symbols-regex "_gobject|PyInit__gobject"
 _gobject_la_LIBADD = \
 	$(GLIB_LIBS) \
