@@ -1,5 +1,16 @@
 2009-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	Bug 566737 – Bad -I ordering can break build
+
+	* Makefile.am:
+	* gobject/Makefile.am:
+	* gio/Makefile.am:
+	* tests/Makefile.am:
+	Commit a patch from [dmacks at netspace dot org]
+
+
+2009-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* configure.ac: Post release version bump to 2.16.1
 
 === 2.16.0 ===
